--- a/Unidad 3 CSS/Tarea 1 Unidad 3/Tarea Unidad 3 CV.css
+++ b/Unidad 3 CSS/Tarea 1 Unidad 3/Tarea Unidad 3 CV.css
@@ -4,107 +4,97 @@
 }
 
 body{
-    background-color: #215766;
+    background-color: #1d5a6b;
     font-family: 'Raleway', sans-serif;
 }
+
 .header{
-    font-size: 10px;
-    padding: 10 px;
-    top: 10px;
-    
-}
-.header__title{
     position: relative;
-    background-color: rgb(2, 2, 49);
-    text-align: center;
-    font-size: 5em;
-    font-weight: 900;
-    line-height: 0.25;
     color: white;
+    text-align: center;
+}
+
+.header__title{
+    background-color: rgb(2, 2, 49);
+    font-size: 60px;
+    font-weight: 800;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.596);
-    padding-top: 1em;
-    padding-bottom: 0.75em;
+    padding-top: 20px;
 }
 
 .header__subtitle{
     background-color: #121274;
-    text-align: center;
-    font-size: 4em;
+    font-size: 45px;
     font-weight: 800 ;
-    color: white;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.596);
-    padding-top: 0.75em;
-    padding-bottom: 1em;
-    line-height: 0.25;
-    height: 20px;
+    padding-bottom: 20px;
 }
+
 .foto{
-    width: 200px;
-    height: 200px;
     position: absolute;
-    display: block;
-    top: 20px;
-    right: 5%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    right: 50px;
+    width: 250px;
+    height: 400px;
     border: 3px solid white;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.596);
     z-index: 10;
 }
 
 .foto img{
     height: 100%;
     width: 100%;
-    display: inline-block;
     object-fit: cover;
 }
 
 .section{
     position: relative;
     left: 0;
-    font-size: 10px;
-    color: aliceblue;
+    color: white;
 }
 
-.section__info h2{
-    background-color: rgb(45, 45, 226, 0.5);
+.section__h2{
+    background-color: #2d66e2;
+    height: 50px;
     padding-left: 50px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    color: white;
-    font-size: 20px;
+    padding-top: 10px;
+    font-size: 30px;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.596);
 }
 
-.section__info h3{
+.section__h2--titulo{
+    background-color: #2d66e2;
+    height: 50px;
+    padding-left: 50px;
+    padding-top: 10px;
+    margin-top: 40px;
+    font-size: 30px;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.596);    
+}
+
+.section__h3{
     padding-left: 50px;
     font-size: 20px;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 15px;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.596);
 }
-p{
+
+.section p{
     text-align: justify;
     padding-left: 50px;
     padding-right: 50px;
-    font-size: 15px;
+    font-size: 17px;
     margin-bottom: 10px;
 }
-#formacion{
-    margin-top: 40px;
-}
 
-#experiencia{
-    margin-top: 40px;
-}
-
-#formulario{
-    margin-top: 40px;
-}
-
-.section__info ul{
+.section__ul{
     padding-left: 50px;
     padding-right: 50px;
     font-size: 15px;
-    padding-top: 15px;
-    padding-bottom: 10px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     line-height: 1.5;
     list-style: none;
     line-height: 2;
@@ -116,90 +106,135 @@ p{
     text-decoration: underline;
 }
 
-.form{
-    position: relative;
-    margin-top: 20px;
-    color: aliceblue;
-}
-
-.form__h2{
-    background-color: rgb(45, 45, 226, 0.5);
+.h2{
+    background-color: #2d66e2;
+    height: 50px;
     padding-left: 50px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 10px;
     margin-top: 40px;
+    font-size: 22px;
     color: white;
-    font-size: 20px;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.596);
 }
 
-.form ul{
+.form{
     display: flex;
-    flex-direction: column;
-    width: 700px;
-    margin-top: 20px;
-    line-height: 2;
+    flex-wrap: wrap;
+    justify-content: center ;
+    background: #518492;
+    margin: 50px 30px;
+    color: white;
+    padding: 0px;
+    font-size: 50px;
+    min-width: 350px;
+    font-size: 14px;
     font-weight: bold;
 }
 
-.form__form li{
-    padding-left: 50px;
-    font-family: 'Raleway', sans-serif;
-    list-style: none;
+.form__column{
+    margin: 30px;
+    min-width: 300px;    
+    width: 40%;
 }
 
-.form__form input, textarea{
-    display: inline-block;
-    background-color: #0d0d29;
-    opacity: .5;
-    width: 600px;
-    height: 25px;
-    padding-left: 10px;
+.form__input{
+    width: 100%;
+    padding: 10px;
+    margin: 7px 0px;
+    border: none;
+    border-bottom: 2px solid #1a3b46;
+    box-sizing: border-box;
+    background: transparent;
+    color: white;
+    min-width: 200px;
+}
+
+.form__input:focus{
+    outline: none;
+    background: #0e242b;
+    border-bottom: 3px solid #47a9c7;
+}
+
+.form__checkbox {
+    margin: 10px 0px;
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.596);
+}
+
+.form__checkbox label{
+    padding-right: 30px;
+}
+
+
+.form__textarea{
+    width: 100%;
+    margin: 7px 0px;
+    border: none;
+    color: white;
+    min-width: 200px;
+}
+
+.form__textarea textarea{
+    width: 100%;
+    margin: auto;
+    box-sizing: border-box;
+    padding: 10px;
+    border: none;
+    border-bottom: 2px solid #1a3b46;
+    background: transparent;
+    color: white;
+    font-family: 'Raleway', sans-serif;   
+}
+
+.form__textarea textarea:focus{
+    outline: none;
+    background: #0e242b;
+    border-bottom: 3px solid #47a9c7;
+}
+
+.form__button{
+    border: none;
+    display: flex;
+    justify-content: baseline;
+    width: 100%;
+    margin: 7px 0px;
+}
+
+.form__button button{
+    width: 50%;
+    padding: 6px;
+    height: 40px;
+    border: none;
+    background: #1a3b46;
+    color: white;
+    cursor: pointer;
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
     font-size: 15px;
 }
 
-.form__form input:hover{
-    border-color: #0d0d29;
-    border-width: 3px;
-    background-color: aliceblue;
-    opacity: 1;
+.form__button button:active{
+    outline: none;
+    background: #0e242b;
+    border-bottom: 3px solid #47a9c7;
 }
 
-
-.form__form--checkbox input{
-    height: 20px;
-    width: fit-content;
-    margin: 10px;
-    justify-items: left;
+.form__button button:hover{
+    outline: none;
+    background: linear-gradient(to bottom, #265868, #0d2830);
 }
 
-.form__form textarea{
-    display: inline-block;
-    width: 600px;
-    height: 100px;
-    padding-left: 10px;
-    font-size: 15px;
+.form__button [type="submit"]{
+    margin-right: 3px;
 }
 
-.form__form textarea:hover{
-    border-color: #0d0d29;
-    border-width: 3px;
-    background-color: aliceblue;
-    opacity: 1;
+.form__button [type="reset"]{
+    margin-left: 3px;
 }
 
-.form button{
-    height: 30px;
-    width: 80px;
-    padding-left: auto;
-    padding-right: auto;
-    font-family: 'Raleway', sans-serif;
-}
-
-.form button:hover{
-    background: aquamarine;
-    box-shadow: 0 4px 16px rgba(49, 138, 172, 1);
-    transition: all 0.2s ease;
+::placeholder{
+    color: aliceblue;
+    opacity: 0.5;
+    font-style: italic;
 }
 .footer{
     position: relative;
